# jazzpy

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
data/raw/: dataRawJazzMajor.txt  dataRawJazzMinor.txt  dataRawJazzRhythm.txt  dataRawJazzStopmayor.txt  dataRawJazzStopminor.txt  dataRawJazzStoprythm.txt
examples/: test_compose.py  test_train_and_compose.py
models/statistical/: jazz_major_1gram.pkl  jazz_major_1gramZero.pkl  jazz_major_2gram.pkl  jazz_major_2gramZero.pkl  jazz_major_3gram.pkl  jazz_rhythm_1gram.pkl  jazz_rhythm_1gramZero.pkl  jazz_rhythm_2gram.pkl  jazz_rhythm_2gramZero.pkl  jazz_rhythm_3gram.pkl
src/jazzpy/: __init__.py  cli.py  composer.py  config.py
src/jazzpy/core/: ngram.py  smoothing.py
src/jazzpy/generation/: harmony.py  melody.py  rhythm.py
src/jazzpy/io/: fileio.py  naming.py
src/jazzpy/training/: parser.py  raw_data.py
tests/: test_ngram.py
